Changes for 3.4.0alpha1

New features:
A.F..J.PS. [ZBXNEXT-1274] added support of configurable jmx endpoint url for jmx items (gcalenko, Ivo, Sasha, vso)
........S. [ZBXNEXT-3872] implemented new internal item 'zabbix[host,discovery,interfaces]' (Andris)
A.F....... [ZBXNEXT-3869] implemented map lines (vjaceslavs)
A.F.I..PS. [ZBXNEXT-1675] added support for user macros and time unit suffixes in various time-related settings: update intervals, timeouts, housekeeping settings, time periods, etc. (gleb, Ivo, Sasha, vjaceslavs)
..F....... [ZBXNEXT-3762] added browser warning for IE 9 and IE10 (gcalenko)
..F....... [ZBXNEXT-3870] implemented ability to drag multiple selected items in map editor (gcalenko)
.......PS. [ZBXNEXT-3655] reduced self monitoring cache locking in trappers and manager processes (wiper)
..F....... [ZBXNEXT-51] implemented ability to copy and paste map elements (gcalenko)
..F....... [ZBXNEXT-3567] implemented ability to hide SQL error messages for non-superadmin users (gcalenko)
.......PS. [ZBXNEXT-3659] reduced cache locking time during configuration synchronization (wiper)
........S. [ZBXNEXT-3432] added support of {HOST.ID}, {HOST.HOST}, {HOST.NAME} macros in tags, improved to read those from cache; added support of interface macros in tags (vso)
A.F.I..PS. [ZBXNEXT-2074] implemented URL encoding and punycode support in web monitoring (vjaceslavs)
A.FG...PS. [ZBXNEXT-3687] make shared memory and semaphores private to the zabbix processes. Drop SQLite3 support for frontend and server (abs)
A.F.I..... [ZBXNEXT-2694] implemented multiple triggers support for map elements (Oleg)
....I...S. [ZBXNEXT-2445] increase the length of alert and trigger errors (abs)
A.F.I..... [ZBXNEXT-2031] implemented map shapes (vjaceslavs)
..F....... [ZBXNEXT-34] implemented vector graphics for maps (vjaceslavs)
A.F....PS. [ZBXNEXT-936] implemented remote command execution via proxy (wiper)